# aceds

./: .env.example  .gitignore  ACE_PLAN.md  ACE_Project_Breakdown_v3-2.md  MODEL_CARD.md  ONE_PAGER.md  README.md  index.html
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/ml/: __init__.py  optimizer.py  predictor.py
backend/app/models/: schemas.py
backend/app/routers/: courses.py  ge.py  health.py  majors.py  optimize.py  predict.py  professors.py  schedules.py  sections.py  trends.py
backend/supabase/: 001_student_profiles.sql  002_data_tables.sql  003_demo_mode.sql
backend/tests/: conftest.py  test_health.py
data_pipeline/: README.md  requirements.txt
data_pipeline/processed/: audit_report.md  baseline_heuristic_report.json  baseline_linear_report.json  cold_start_report.json  cold_start_report.md  xgb_feature_cols.json  xgb_feature_cols_no_hist.json  xgb_feature_cols_no_rmp.json  xgb_model.json  xgb_model_no_rmp.json  xgb_report.json  xgb_report_no_hist.json  xgb_report_no_rmp.json
data_pipeline/schemas/: major.schema.json
data_pipeline/scripts/: 00_audit_unified.py  01_fetch_nexus_grades.py  02_fetch_ucsb_catalog.py  03_fetch_rmp.py  04_merge.py  05_extract_majors_claude.py  06_review_majors.py  07_load_to_supabase.py  08_majors_json_to_ts.py  10_build_features.py  11_baseline_heuristic.py  12_baseline_linear.py  13_xgboost.py  (+4 more)
frontend/: README.md  package-lock.json  package.json
scripts/: smoke_e2e.sh
src/: App.tsx
(+33 files in other folders)
